# uppasd_tools

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml
data/FeCo/: README.md  averages.FeCo__B2.out  bcc_Fe.o16972957  coord.FeCo__B2.out  cumulants.FeCo__B2.out  mcinitial.FeCo__B2.out  projavgs.FeCo__B2.out  projcumulants.FeCo__B2.out  restart.FeCo__B2.out  totenergy.FeCo__B2.out
data/bccFe/: README.md  averages.bcc_Fe_T.out  bcc_Fe.o16972805  coord.bcc_Fe_T.out  cumulants.bcc_Fe_T.out  mcinitial.bcc_Fe_T.out  restart.bcc_Fe_T.out  stdenergy.bcc_Fe_T.out  struct.bcc_Fe_T.out  totenergy.bcc_Fe_T.out
data/bccFe_thermal/: README.md  submit_all.sh
data/bccFe_thermal/bccFe_temp_T100/: averages.bccFe_T_.out  cumulants.bccFe_T_.out  mcinitial.bccFe_T_.out  restart.bccFe_T_.out  stdenergy.bccFe_T_.out  totenergy.bccFe_T_.out
data/bccFe_thermal/bccFe_temp_T1000/: averages.bccFe_T_.out  cumulants.bccFe_T_.out  mcinitial.bccFe_T_.out  restart.bccFe_T_.out  stdenergy.bccFe_T_.out  subjob.sh  totenergy.bccFe_T_.out
docs/source/: api.rst  collect.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  quick_start.rst  structure.rst  uppout.rst
examples/: analyze_structure.ipynb  collect_data.ipynb  read_output_files.ipynb  visualize_structure.ipynb
src/uppasd_tools/: __init__.py  analyze.py  collect.py  read.py  structure.py  thermal.py  uppout.py  uppout_schema.py  visualize.py
tests/: conftest.py  test_averages.py  test_collect_thermal.py  test_uppout_bccfe.py  test_uppout_feco.py
(+472 files in other folders)
