[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uppasd-tools"
version = "0.1.0"
description = "Utilities for parsing UppASD simulation outputs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "UppASD Tools"}]

dependencies = [
  "pandas>=1.5",
  "numpy",
  "py3Dmol",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
viz = ["playwright"]
notebooks = ["jupyterlab", "matplotlib", "ipywidgets"]
all = ["pytest>=7.0", "playwright", "jupyterlab", "matplotlib", "ipywidgets"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
